@@ -98,5 +98,12 @@ Style/SpecialGlobalVars:
 Style/MissingRespondToMissing:
   Enabled: false
 
-Style/BracesAroundHashParameters:
-  Enabled: false
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
