@@ -1,0 +1,23 @@
+ifdef::env-github[]
+NOTE: For the best reading experience,
+please view this documentation at https://www.elastic.co/guide/en/apm/agent/ruby[elastic.co]
+endif::[]
+
+[[graphql]]
+== GraphQL (experimental)
+
+The agent comes with support for GraphQL based APIs.
+
+This slightly alters how transactions are named when they relate to GraphQL
+queries, so they are easier to tell apart and debug.
+
+To enable GraphQL support, add the included Tracer to your schema:
+
+[source,ruby]
+----
+class MySchema < GraphQL::Schema
+  # ...
+
+  tracer ElasticAPM::GraphQL # <-- include this
+end
+----
