@@ -22,6 +22,7 @@ require 'elastic_apm/instrumenter'
 require 'elastic_apm/util'
 
 require 'elastic_apm/middleware'
+require 'elastic_apm/graphql'
 
 require 'elastic_apm/rails' if defined?(::Rails::Railtie)
 require 'elastic_apm/sinatra' if defined?(::Sinatra)
